--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   flutter_bloc: ^8.1.3
   get_it: ^7.6.4
   shared_preferences: ^2.2.2
+  flutter_countdown_timer: ^4.1.0
 
   cupertino_icons: ^1.0.2
 
@@ -38,6 +39,9 @@ flutter:
 
   assets:
     - assets/images/
+    - assets/images/home/
+    - assets/images/elements/
+    - assets/images/daily_reward/
 
   fonts:
     - family: Roboto
