--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   get_it: ^7.6.4
   shared_preferences: ^2.2.2
   flutter_countdown_timer: ^4.1.0
+  flutter_fortune_wheel: ^1.3.0
 
   cupertino_icons: ^1.0.2
 
@@ -42,6 +43,13 @@ flutter:
     - assets/images/home/
     - assets/images/elements/
     - assets/images/daily_reward/
+    - assets/images/spots/
+    - assets/images/settings/
+    - assets/images/roulette/
+    - assets/images/slot/
+    - assets/images/pokies/
+    - assets/images/win/
+    - assets/images/games-elements/
 
   fonts:
     - family: Roboto
