--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter:
     sdk: flutter
 
+  flutter_launcher_icons: ^0.13.1
   auto_route: ^7.8.4
   flutter_svg: ^2.0.9
   flutter_bloc: ^8.1.3
@@ -31,6 +32,12 @@ dev_dependencies:
   build_runner: ^2.4.4
 
   flutter_lints: ^2.0.0
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  remove_alpha_ios: true
+  image_path: "assets/images/app_icon.png"
 
 
 flutter:
